src/main/java/com/example/TaxiApp/DTO/error/Response/UserRoleRegisteredResponse.java
package com.example.TaxiApp.DTO.error.Response;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class UserRoleRegisteredResponse {
    private String code;
    private String message;
}
